Fix my solution, near but no too much to solution

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -4,22 +4,27 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   overflow: hidden;
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  
 }
 
 .header, 
 .footer {
   display: flex;
   justify-content: space-evenly;
+  padding: 1px;
+  
+  
   
 }
 
 .footer {
-  background-color: lightgrey;
+  background-color: whitesmoke;
+ 
 }
 
 .left-links,
@@ -66,7 +71,7 @@ button {
   border-radius: 8px;
   background: #eee;
   margin-top: 10px;
-  padding: 5px;
+  padding: 8px 16px;
 }
 
 input {
